@@ -508,6 +508,9 @@ Documentation
 Tests
 -----
 
+- Issue #7498: test_multiprocessing now uses test_support.find_unused_port
+  instead of a hardcoded port number in test_rapid_restart.
+
 - Issue #7431: use TESTFN in test_linecache instead of trying to create a 
   file in the Lib/test directory, which might be read-only for the
   user running the tests.
